--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <main class="wrap">
     <!-- Logo + Title -->
-    <img class="logo" src="https://i.postimg.cc/bwYsTGKt/The-unicorn-in-the-sky.png" alt="Fancy Pony logo" />
+    <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" alt="Fancy Pony logo" />
     <h1>Fancy Pony — Artwork Submission</h1>
     <p class="intro">
       Unleash your creativity this Lunar New Year by designing your family’s very own Fancy Pony!
@@ -132,7 +132,7 @@
     <form id="form" class="grid" novalidate>
       <div class="field">
         <label for="name">Your Name *</label>
-        <input id="name" name="name" type="text" placeholder="e.g., Alex Chen" required>
+        <input id="name" name="name" type="text" placeholder="e.g., Demi Tai" required>
       </div>
 
       <div class="field">
@@ -152,7 +152,7 @@
             <button class="btn-file" type="button">Choose File</button>
             <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required>
           </span>
-          <span id="fname" class="file-name">no file selected</span>
+          <span id="fname" class="file-name">No file selected</span>
         </div>
         <div class="sub" style="margin-top:8px">
           File size must be between <strong>1&nbsp;MB</strong> and <strong>5&nbsp;MB</strong>.
@@ -203,12 +203,12 @@
 
     <!-- Pony Station Image -->
     <div class="poster">
-      <img src="https://i.postimg.cc/sx6DHKFG/Pony-Station.png" alt="Pony Station">
+      <img src="https://i.postimg.cc/pXMp7cnz/Summon-Your-Fancy-Pony.png" alt="Pony Station">
     </div>
   </main>
 
   <!-- 背景版權提示 -->
-  <div class="bg-credit">Background image designed by Demi Tai</div>
+  <div class="bg-credit">Illustration design by Demi Tai</div>
 
 <script>
   // === Replace with your Web App /exec URL ===
@@ -247,7 +247,7 @@
   }
 
   // pagination state
-  const pageSize = 5;
+  const pageSize = 3;
   let itemsAll = [];      // 全部最近資料
   let pageIndex = 0;      // 目前頁次（0-based）
 
