--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Fancy Pony — Artwork Submission</title>
 <style>
   :root{
-    --brand:#000000;
+    --brand:#43C7C7;
     --ok:#16a34a;
     --warn:#b45309;
     --err:#b91c1c;
