--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     --warn:#b45309;
     --err:#b91c1c;
     --ink:#0f172a;
-    --muted:#43C7C7;
+    --muted:#000000;
     --card-bg: rgba(255,255,255,0.92);
   }
   html,body{height:100%}
