--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
 h1 .title-main {
   display: block;
-  font-size: clamp(28px, 5vw, 44px); /* 主標字體大 */
+  font-size: clamp(30px, 5vw, 44px); /* 主標字體大 */
   font-weight: 900;
 }
 
 h1 .title-sub {
   display: block;
-  font-size: clamp(18px, 3vw, 26px); /* 副標字體較小 */
+  font-size: clamp(20px, 3vw, 26px); /* 副標字體較小 */
   font-weight: 600;
   color: var(--muted); /* 副標可用次要顏色 */
 }
@@ -222,6 +222,8 @@ h1 .title-sub {
 
     <!-- Pony Station Image -->
     <div class="poster">
+      <h2><span class="title-main"CNY Fancy Pony Station</span>
+      <span class="title-sub">Step-by-Step Guide</span></h2>
       <img src="https://i.postimg.cc/pXMp7cnz/Summon-Your-Fancy-Pony.png" alt="Pony Station">
     </div>
   </main>
