--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ h1 .title-sub {
 
     <!-- Pony Station Image -->
     <div class="poster">
-      <h2><span class="title-main"CNY Fancy Pony Station</span>
+      <h2><span class="title-main">CNY Fancy Pony Station</span>
       <span class="title-sub">Step-by-Step Guide</span></h2>
       <img src="https://i.postimg.cc/pXMp7cnz/Summon-Your-Fancy-Pony.png" alt="Pony Station">
     </div>
