--- a/index.html
+++ b/index.html
@@ -222,8 +222,10 @@ h1 .title-sub {
 
     <!-- Pony Station Image -->
     <div class="poster">
-      <h2><span class="title-main">CNY Fancy Pony Station</span>
-      <span class="title-sub">Step-by-Step Guide</span></h2>
+      <h2>
+  <span class="title-main">CNY Fancy Pony Station</span><br>
+  <span class="title-sub">Step-by-Step Guide</span>
+</h2>
       <img src="https://i.postimg.cc/pXMp7cnz/Summon-Your-Fancy-Pony.png" alt="Pony Station">
     </div>
   </main>
