--- a/index.html
+++ b/index.html
@@ -205,7 +205,13 @@ h1 .title-sub {
         <h2>Recent submissions</h2>
         <div class="actions">
           <span class="panel-info">Total drawings collected: <span id="count">–</span></span>
-          <a class="a" href="#" id="refresh">refresh</a>
+          <!-- 引入 Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+<!-- Refresh icon link -->
+<a class="a" href="#" id="Refresh">
+  <i class="fas fa-rotate-right"></i>
+</a>
         </div>
       </div>
 
@@ -226,7 +232,7 @@ h1 .title-sub {
   <span class="title-main">CNY Fancy Pony Station</span><br>
   <span class="title-sub">Step-by-Step Guide</span>
 </h2>
-      <img src="https://i.postimg.cc/pXMp7cnz/Summon-Your-Fancy-Pony.png" alt="Pony Station">
+      <img src="https://i.postimg.cc/V6fKhGRR/CNY-Fancy-Pony-Station-Step-by-Step-Guide.png">
     </div>
   </main>
 
