--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   /* 預留左右按鈕空間，避免遮到內容 */
   .list-wrap{
     position:relative;
-    padding:0 56px;   /* <-- 新增：為左右箭頭預留空間 */
+    padding:0 60px;   /* <-- 新增：為左右箭頭預留空間 */
   }
   .list{display:flex; flex-direction:column; gap:10px; min-height:170px}
   .item{padding:12px; border:1px solid #e5e7eb; border-radius:12px; background:#fff}
@@ -153,7 +153,7 @@
 
   <main class="wrap">
     <!-- Logo + Title -->
-    <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" alt="Fancy Pony logo" />
+    <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" />
     <h1>
       <span class="title-main">Fancy Pony</span>
       <span class="title-sub">Artwork Submission</span>
