--- a/index.html
+++ b/index.html
@@ -159,11 +159,14 @@
       <span class="title-sub">Artwork Submission</span>
     </h1>
     <p class="intro">
-      Unleash your creativity this Lunar New Year by designing your family’s very own Fancy Pony!
-      Kiddos and families are invited to submit colorful letter-sized pony drawings full of imagination and festive spirit.
-      Selected designs will be printed onto paper bags, ready for you to decorate at our special station.
-      After adding your unique touch, showcase your masterpiece on the “Pony Parade Wall” and snap a photo to remember the moment.
-      Let’s fill the celebration with color, fun, and your amazing ideas — submit your artwork today!
+      Saddle Up for Creativity Where Ponies Meet Imagination!</b>
+This Lunar New Year, create your very own Fancy Pony! Families and young artists are invited to design a colorful, letter sized pony drawing bursting with festive spirit!</b> 
+
+The Magic in 3 Steps:</b>
+Create. Celebrate. Capture.</b> 
+Submit your pony artwork, see it feature on our paper bags, and showcase it on the Pony Parade Wall. Don’t forget your photo finish!</b> 
+Let’s fill the celebration with color, creativity, and joy.</b>
+Submit your Fancy Pony today and join the parade!
     </p>
 
     <!-- Form -->
