--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
       <span class="title-sub">Artwork Submission</span>
     </h1>
     <p class="intro">
-      Saddle Up for Creativity Where Ponies Meet Imagination!</b>
-This Lunar New Year, create your very own Fancy Pony! Families and young artists are invited to design a colorful, letter sized pony drawing bursting with festive spirit!</b> 
+      Saddle Up for Creativity Where Ponies Meet Imagination!<br>
+This Lunar New Year, create your very own Fancy Pony! Families and young artists are invited to design a colorful, letter-sized pony drawing bursting with festive spirit!<br> 
 
-The Magic in 3 Steps:</b>
-Create. Celebrate. Capture.</b> 
+The Magic in 3 Steps:<br>
+Create. Celebrate. Capture.<br> 
 Submit your pony artwork, see it feature on our paper bags, and showcase it on the Pony Parade Wall. Don’t forget your photo finish!</b> 
-Let’s fill the celebration with color, creativity, and joy.</b>
+Let’s fill the celebration with color, creativity, and joy.<br>
 Submit your Fancy Pony today and join the parade!
     </p>
 
