--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     background-size:220px auto;
     background-attachment:fixed;
   }
+  p {
+  font-size: 12px; /* 改成你要的大小 */
+  line-height: 1.4; /* 行距建議一起調整 */
+}
+  .highlight-text {
+  color: #43C7C7;   /* 紅色 */
+  font-size: 16px;  /* 單獨變大 */
+  font-weight: bold; /* 可以再加粗 */
+}
   /* 背景版權文字（單行置底置中） */
   .bg-credit{
     position:fixed; bottom:8px; left:50%; transform:translateX(-50%);
@@ -162,8 +171,8 @@
       Saddle Up for Creativity Where Ponies Meet Imagination!<br>
 This Lunar New Year, create your very own Fancy Pony! Families and young artists are invited to design a colorful, letter-sized pony drawing bursting with festive spirit!<br> 
 
-The Magic in 3 Steps:<br>
-Create. Celebrate. Capture.<br> 
+<span class="highlight-text">The Magic in 3 Steps:</span><br>
+<span class="highlight-text">Create. Celebrate. Capture.</span><br> 
 Submit your pony artwork, see it feature on our paper bags, and showcase it on the Pony Parade Wall. Don’t forget your photo finish!</b> 
 Let’s fill the celebration with color, creativity, and joy.<br>
 Submit your Fancy Pony today and join the parade!
