--- a/index.html
+++ b/index.html
@@ -169,13 +169,16 @@
     </h1>
     <p class="intro">
       Saddle Up for Creativity Where Ponies Meet Imagination!<br>
-This Lunar New Year, create your very own Fancy Pony! Families and young artists are invited to design a colorful, letter-sized pony drawing bursting with festive spirit!<br> 
-
-<span class="highlight-text">The Magic in 3 Steps:</span><br>
-<span class="highlight-text">Create. Celebrate. Capture.</span><br> 
-Submit your pony artwork, see it feature on our paper bags, and showcase it on the Pony Parade Wall. Don’t forget your photo finish!</b> 
-Let’s fill the celebration with color, creativity, and joy.<br>
-Submit your Fancy Pony today and join the parade!
+      This Lunar New Year, create your very own Fancy Pony! <br>
+      Families and young artists are invited to design a colorful,<br>
+      letter-sized pony drawing bursting with festive spirit!<br> 
+      <span class="highlight-text">The Magic in 3 Steps:</span><br>
+      <span class="highlight-text">Create. Celebrate. Capture.</span><br> 
+      Submit your pony artwork, see it feature on our paper bags,<br>
+      and showcase it on the Pony Parade Wall. <br> 
+      Don’t forget your photo finish!</b> 
+      Let’s fill the celebration with color, creativity, and joy.<br>
+      Submit your Fancy Pony today and join the parade!
     </p>
 
     <!-- Form -->
