--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 }
   .highlight-text {
   color: #43C7C7;   /* 紅色 */
-  font-size: 20px;  /* 單獨變大 */
+  font-size: 1.6em;  /* 單獨變大 */
   font-weight: bold; /* 可以再加粗 */
 }
   /* 背景版權文字（單行置底置中） */
@@ -47,7 +47,7 @@
   h1{margin:0 0 8px 0; font-size:clamp(22px,4.5vw,36px); letter-spacing:.3px; text-align:center}
   .intro{
     text-align:center; max-width:800px; margin:0 auto 20px auto;
-    font-size:0.8em; line-height:1.2;
+    font-size:1.2em; line-height:1.5;
   }
   h1 { margin: 0 0 8px 0; text-align: center; letter-spacing: .3px; }
   h1 .title-main { display:block; font-size:clamp(34px, 5vw, 44px); font-weight:900; }
