--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
   h1{margin:0 0 8px 0; font-size:clamp(22px,4.5vw,36px); letter-spacing:.3px; text-align:center}
   .intro{
     text-align:center; max-width:800px; margin:0 auto 20px auto;
-    font-size:0.9em; line-height:1.2;
+    font-size:0.9em; line-height:1.4;
   }
   h1 { margin: 0 0 8px 0; text-align: center; letter-spacing: .3px; }
-  h1 .title-main { display:block; font-size:clamp(34px, 5vw, 44px); font-weight:900; }
-  h1 .title-sub  { display:block; font-size:clamp(22px, 3vw, 26px); font-weight:600; color:var(--muted); }
+  h1 .title-main { display:block; font-size:clamp(1.8em, 5vw, 2.0em); font-weight:900; }
+  h1 .title-sub  { display:block; font-size:clamp(1.6em, 3vw, 1.8em); font-weight:600; color:var(--muted); }
 
   /* 表單 */
   .grid{display:block}
