--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   }
   h1 { margin: 0 0 8px 0; text-align: center; letter-spacing: .3px; }
   h1 .title-main { display:block; font-size:clamp(1.6em, 5vw, 1.8em); font-weight:900; }
-  h1 .title-sub  { display:block; font-size:clamp(1.4em, 3vw, 1.2em); font-weight:600; color:var(--muted); }
+  h1 .title-sub  { display:block; font-size:clamp(1.2em, 3vw, 1.4em); font-weight:600; color:var(--muted); }
 
   /* 表單 */
   .grid{display:block}
@@ -169,12 +169,14 @@
     </h1>
     <p class="intro">
       Saddle Up for Creativity Where Ponies Meet Imagination!<br>
-      This Lunar New Year, create your very own Fancy Pony! <br>
+      This Lunar New Year,<br> 
+      create your very own Fancy Pony! <br>
       Families and young artists are invited to design a colorful,<br>
       letter-sized pony drawing bursting with festive spirit!<br> 
       <span class="highlight-text">The Magic in 3 Steps:</span><br>
       <span class="highlight-text">Create. Celebrate. Capture.</span><br> 
-      Submit your pony artwork, see it feature on our paper bags,<br>
+      Submit your pony artwork,<br> 
+      see it feature on our paper bags,<br>
       and showcase it on the Pony Parade Wall. <br> 
       Don’t forget your photo finish!</b> 
       Let’s fill the celebration with color, creativity, and joy.<br>
